[gd_scene load_steps=2 format=3 uid="uid://cy3fxw03us0l1"]

[ext_resource type="Script" path="res://scripts/Leon/DamageSystem.gd" id="1_n2nq0"]

[node name="DealDmg" type="Area3D"]
script = ExtResource("1_n2nq0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
